--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'software.amazon.awssdk:cloudformation'
     implementation 'software.amazon.awssdk:s3'
     implementation 'software.amazon.awssdk:route53'
+    implementation 'software.amazon.awssdk:cloudfront'
     
     implementation platform('org.apache.logging.log4j:log4j-bom:2.20.0')
     implementation 'org.apache.logging.log4j:log4j-slf4j2-impl'
